# cosmic-applet-usage

./: Cargo.toml  README.md  justfile
i18n/en/: cosmic_applet_usage.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  main.rs
